# krpano-decrypt

./: AGENTS.md  Cargo.toml  PLAN.md  README.md
crates/krpano-decrypt/: Cargo.toml
crates/krpano-decrypt-cli/: Cargo.toml
crates/krpano-decrypt-cli/src/: main.rs
crates/krpano-decrypt/src/: branches.rs  codecs.rs  crypto.rs  engine.rs  error.rs  header.rs  lib.rs  modern_engine.rs  old_engine.rs  viewer.rs
examples/: krpano-decrypt.rs
reference/: README.md  lz4_block.js  modern_krp_unpack.js  modified_base85.js  old_wrapper_unpack.js  rc4_byte_decryptor.js  subdiv_branch5.js
src/: branches.rs  engine.rs  error.rs  header.rs  lib.rs  modern_engine.rs  old_engine.rs  viewer.rs
testdata/encrypted/2013-09-27/: tour.js
testdata/encrypted/2014-12-18/: tour.js  tour.xml
testdata/encrypted/2015-08-04-KENCRUBR/: plaintext.xml  tour.js  tour.xml
testdata/encrypted/2017-09-21/: tour.js  tour.xml
testdata/encrypted/2018-04-04/: rows.json
testdata/encrypted/2018-04-23-KENCRUBR/: plaintext.xml  tour.js  tour.xml
testdata/encrypted/2019-10-15-KENCPUPR-1.20/: tour.js  tour.xml
testdata/encrypted/2023-02-07/: rows.json  tour.js  tour.xml
testdata/encrypted/2023-04-30/: decoded.js  rows.json  tour.js  tour.xml
testdata/encrypted/2023-04-30-PP/: rows.json  tour.js  tour.xml
testdata/encrypted/2023-12-11/: rows.json
testdata/encrypted/2024-12-20/: rows.json  tour.xml
testdata/encrypted/2026-06-25-pp-01_minimal/: plaintext.xml  tour.js  tour.xml
testdata/encrypted/2026-06-25-pp-02_special_chars/: plaintext.xml  tour.js  tour.xml
testdata/encrypted/2026-06-25-pp-03_nested/: plaintext.xml  tour.js  tour.xml
testdata/encrypted/2026-06-25-pp-04_large/: plaintext.xml  tour.js  tour.xml
testdata/encrypted/2026-06-25-pp-05_deep/: plaintext.xml  tour.js  tour.xml
testdata/encrypted/2026-06-25-rr_minimal/: plaintext.xml  tour.js  tour.xml
testdata/encrypted/2026-06-25-rr_special/: plaintext.xml  tour.js  tour.xml
testdata/encrypted/2026-06-25-rr_tour/: plaintext.xml  tour.js  tour.xml
testdata/malformed/modern-browser-marker-index-out-of-range/: tour.js  tour.xml
testdata/malformed/modern-checksum-tail-short/: tour.js
testdata/malformed/modern-short-wrapper-key/: tour.js
tools/: README.md  capture_engine.mjs  extract_rows.mjs  inspect.mjs  package.json  run_snippet.mjs  sandbox.mjs  tools_test.mjs  trace_decrypt.mjs
tools/browser/: instrument.html
