[package]
name = "krpano-decrypt"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/lovasoa/krpano-decrypt"
homepage = "https://github.com/lovasoa/krpano-decrypt"
authors = ["lovasoa"]
description = "Decrypt encrypted krpano tour XML and obfuscated viewer JavaScript"
readme = "README.md"
keywords = ["krpano", "decrypt", "xml", "javascript", "panorama"]
categories = ["cryptography", "multimedia", "parser-implementations"]

[dependencies]
base64 = "0.22"
regex = "1"
thiserror = "2"
log = "0.4"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.8"

[lib]
name = "krpano_decrypt"
path = "src/lib.rs"

[[example]]
name = "krpano-decrypt"
path = "examples/krpano-decrypt.rs"

# Shared profile for faster CI builds.
[profile.dev]
debug = 1
