[package]
name = "krpano-decrypt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Command-line tool for decrypting encrypted krpano tour XML and viewer JS"
readme = "../../README.md"

[[bin]]
name = "krpano-decrypt"
path = "src/main.rs"
doc = false

[dependencies]
krpano-decrypt.workspace = true
clap.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
