[package]
name = "krpano-decrypt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Decrypt encrypted krpano tour XML and obfuscated viewer JavaScript"
readme = "../../README.md"
keywords = ["krpano", "decrypt", "xml", "javascript", "panorama"]
categories = ["cryptography", "multimedia", "parser-implementations"]

[dependencies]
base64.workspace = true
regex.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
serde-xml-rs.workspace = true

[lib]
name = "krpano_decrypt"
path = "src/lib.rs"
